WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12192
SVG gradients not invalidating correctly on stop changes
https://bugs.webkit.org/show_bug.cgi?id=12192
Summary
SVG gradients not invalidating correctly on stop changes
Eric Seidel (no email)
Reported
2007-01-10 02:45:44 PST
SVG gradients not invalidating correctly on stop changes This shouldn't be hard to fix. We just need to listen for "childrenChanged"
Attachments
test case showing the problem
(661 bytes, image/svg+xml)
2007-01-10 02:48 PST
,
Eric Seidel (no email)
no flags
Details
single stop added via DOM
(1016 bytes, image/svg+xml)
2007-01-10 11:58 PST
,
Alex Russell
no flags
Details
fix and test case
(9.30 KB, patch)
2007-01-15 01:23 PST
,
Eric Seidel (no email)
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2007-01-10 02:48:26 PST
Created
attachment 12341
[details]
test case showing the problem
Alex Russell
Comment 2
2007-01-10 11:56:57 PST
It's possible to get creation of a single new <stop> element working from script, so long as the attributes dictating the stop are set *after* the node is added to the render tree. Attaching "one_stop_add.svg" to demonstrate the issue.
Alex Russell
Comment 3
2007-01-10 11:58:19 PST
Created
attachment 12348
[details]
single stop added via DOM
Eric Seidel (no email)
Comment 4
2007-01-15 01:23:45 PST
Created
attachment 12449
[details]
fix and test case
Maciej Stachowiak
Comment 5
2007-01-15 01:30:42 PST
Comment on
attachment 12449
[details]
fix and test case r=me
Eric Seidel (no email)
Comment 6
2007-01-15 01:37:38 PST
Hopefully, this will make life easier on those trying to use SVG JS bindings.
r18856
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug