2007-01-15  Eric Seidel  <eric@eseidel.com>

Reviewed by mjs.
        
        SVG gradients do not notice stop additions
        http://bugs.webkit.org/show_bug.cgi?id=12192

        Test: svg/custom/gradient-add-stops.svg

        * ksvg2/svg/SVGGradientElement.cpp:
        (WebCore::SVGGradientElement::childrenChanged):
        * ksvg2/svg/SVGGradientElement.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@18856 bbb929c8-8fbe-4397-9dbb-9b2b20218538