third_party/WebKit/WebCore/ksvg2/svg/SVGGradientElement.cpp
@@ -144,6 +144,12 @@ void SVGGradientElement::insertedIntoDocument()
         SVGResource::repaintClients(extensions->removePendingResource(resourceId));
 }
 
+void SVGGradientElement::childrenChanged()
+{
+    notifyAttributeChange();
+    SVGStyledElement::childrenChanged();
+}
+
 }
 
 #endif // SVG_SUPPORT
