third_party/WebKit/WebCore/ksvg2/svg/SVGGradientElement.h
@@ -56,6 +56,7 @@ namespace WebCore {
         virtual SVGResource* canvasResource();
 
         virtual void insertedIntoDocument();
+        virtual void childrenChanged();
 
     protected:
         friend class SVGPaintServerGradient;
